# lambda-calculus

./: .gitignore  README.md
haskell/lambda/: examples.txt  lambda.cabal  stack.yaml
haskell/lambda/app/: Main.hs
haskell/lambda/src/: Lambda.hs
haskell/lambda/test/: Spec.hs
