name:                lambda
version:             0.1.0.0
synopsis:            Lambda Calculus
description:         Lambda Calculus
homepage:            http://github.com/scott-fleischman/lambda#readme
license:             MIT
license-file:        ../../LICENSE
author:              Scott Fleischman
maintainer:          scott.fleischman@logos.com
copyright:           2015 Scott Fleischman
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lambda
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6
  default-language:    Haskell2010

executable lambda-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda
  default-language:    Haskell2010

test-suite lambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambda
                     , QuickCheck >= 2.4
                     , test-framework             >= 0.6
                     , test-framework-quickcheck2 >= 0.2
                     , test-framework-th          >= 0.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/scott-fleischman/lambda
